# covjson-msgspec

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  properdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-review.yml
benchmarks/: README.md  results.json  results.md  results.template.md  run.py
docs/: concepts.md  getting-started.md  index.md
docs/adr/: 0001-python-3-11-floor.md  0002-opt-in-tiered-validation.md  0003-issue-code-enum.md  0004-ndarray-single-non-generic-class.md  0005-langcodes-core-dependency.md  0006-validation-findings-sum-type.md  0007-functional-core-errors-as-values.md  0008-temporal-conversion-result-projection.md  0009-openapi-schema-bridge.md  0010-dependency-floor-policy.md  0011-axis-ordering-checker-seam.md  0012-custom-members-dropped-on-decode.md  0012-foreign-members-dropped-on-decode.md  0013-unset-for-omittable-inheritance-members.md  0014-documentation-toolchain.md  0015-bridge-temporal-classification.md  0016-readonly-mapping-members.md  0017-reference-systems-permissive-core-projection.md  0018-typed-projection-scope.md  0019-composite-coordinates-required.md  README.md
docs/comparison/: covjson-pydantic.md
docs/design/: index.md  tenets-in-practice.md  tenets.md
docs/guides/: advanced.md  geo.md  http.md  numpy.md  pandas.md  references.md  subsetting.md  tiles.md  validation.md  xarray.md
docs/reference/: bridges.md  coverage.md  domain.md  index.md  media-type.md  parameter.md  range.md  references.md  referencing.md  subset.md  temporal.md  validation.md
docs/stylesheets/: extra.css
scripts/: pin-precommit-shas.sh
src/covjson_msgspec/: __init__.py  _base.py  _best_effort.py  _bridging.py  _fetch.py  _i18n.py  _ndindex.py  _reference_invariants.py  _repr.py  axis.py  coverage.py  domain.py  fastapi.py  geo.py  i18n.py  media_type.py  pandas.py  parameter.py  range.py  ranges.py  references.py  referencing.py  schema.py  subset.py  temporal.py  validation.py  xarray.py
tests/: fetchers.py  test_axis.py  test_base.py  test_best_effort.py  test_corpus.py  test_coverage.py  test_datetime_faithfulness.py  test_domain.py  test_fastapi.py  test_geo.py  test_media_type.py  test_msgspec_contract.py  test_numpy.py  test_pandas.py  test_parameter.py  test_range.py  test_ranges.py  test_references.py  test_referencing.py  test_repr.py  test_schema.py  test_spikes.py  test_subset.py  test_temporal.py  test_validation.py  test_xarray.py
tests/corpus/: README.md
tests/corpus/covjson-pydantic/: manifest.toml  polygon-coverage-collection.json  polygon-domain-no-composite.json  polygon-domain-too-many-t.json  spec-domain-polygon-no-t.json  spec-domain-polygon.json  tiled-ndarray-integer.json  tiled-ndarray-invalid-tileshape.json  tiled-ndarray-missing-tilesets.json  tiled-ndarray-missing-urltemplate.json  tiled-ndarray-string.json
tests/corpus/negative/: axis-bounds-length.json  axis-composite-arity.json  axis-composite-value-shape-polygon.json  axis-composite-value-shape-tuple.json  axis-coordinates-not-omitted.json  axis-not-monotonic.json  axis-polygon-position-arity.json  axis-polygon-ring-not-closed.json  axis-polygon-ring-too-short.json  composite-data-type.json  coverage-domain-type-conflict.json  coverage-domain-type-not-omitted.json  coverage-missing-parameters.json  coverage-range-without-parameter.json  domain-composite-coordinates.json  domain-extra-axis-not-single.json  domain-missing-domain-type.json  domain-missing-referencing.json  domain-unexpected-axis.json  i18n-empty.json  i18n-invalid-language-tag.json  identifier-missing-target-concept.json  manifest.toml  ndarray-value-count.json  parameter-category-encoding-unknown-id.json  parameter-group-unknown-member.json  range-axis-not-in-domain.json  range-invalid-category-code.json  range-shape-mismatch.json  temporal-lexical-form.json  temporal-missing-calendar.json  tiled-ndarray-shape-rank.json  tiled-ndarray-tile-shape-not-positive.json  tiled-ndarray-tile-shape-too-large.json  tiled-ndarray-url-template-missing-variable.json  tiled-ndarray-url-template-unknown-variable.json
tests/typing/: test_typing_ndarray.py  test_typing_references.py
