[project]
name = "covjson-msgspec"
version = "0.1.0"
description = "Fast, fully-typed CoverageJSON models built on msgspec"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Chuck Daniels", email = "cjdaniels4@gmail.com" }]
keywords = ["coveragejson", "covjson", "msgspec", "geospatial", "ogc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: GIS",
    "Typing :: Typed",
]
dependencies = [
    "msgspec>=0.18",
    # TypeVar(default=...) (PEP 696) is only in stdlib typing on 3.13+; use the
    # backport on 3.11/3.12. Pure-Python, no transitive deps.
    "typing-extensions>=4.12; python_version < '3.13'",
]

[project.urls]
Homepage = "https://github.com/chuckwondo/covjson-msgspec"
Repository = "https://github.com/chuckwondo/covjson-msgspec"
Issues = "https://github.com/chuckwondo/covjson-msgspec/issues"

# Optional bridges -- the "thin core + opt-in bridges" architecture. Core stays
# msgspec-only; each bridge lazy-imports its dependency and raises an install
# hint if missing.
[project.optional-dependencies]
numpy = ["numpy>=1.24"]
# xarray>=2024.10 first ships xarray.DataTree, used by the collection bridge.
xarray = ["xarray>=2024.10", "numpy>=1.24", "cftime>=1.6"]
pandas = ["pandas>=2.0", "numpy>=1.24"]
# geopandas guarantees pandas + numpy transitively, but the geo bridge imports
# both directly (it reuses the pandas bridge and builds geometry with numpy), so
# list them explicitly rather than relying on a transitive dependency.
geo = ["geopandas>=0.14", "shapely>=2.0", "pandas>=2.0", "numpy>=1.24"]
# The litestar / fastapi response-helper bridges are planned but not yet shipped,
# so they carry no extra until there is code behind them (an extra that installs
# a framework but adds nothing would mislead).
all = ["covjson-msgspec[numpy,xarray,pandas,geo]"]

# PEP 735 dependency groups (uv-native).
[dependency-groups]
# Default local dev set: pure-Python tooling + every bridge, so `uv sync` works
# on any platform without a build toolchain. (mypy ships wheels; the Node-based
# checker lives in `typecheck` below.)
dev = [
    "covjson-msgspec[all]",
    "ruff>=0.15",
    "mypy>=1.13",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "coverage>=7.5",
    "prek>=0.0.1",
]
# Strict source-gate checker for CI. basedpyright bundles a Node runtime
# (nodejs-wheel-binaries), so it is opt-in to keep the default sync lightweight.
# pyrefly + ty (pre-1.0) run via `uvx` in CI and are deliberately kept out of
# the lock.
typecheck = ["basedpyright>=1.21"]
bench = [
    "covjson-msgspec[all]",
    "pytest-benchmark>=4.0",
    "covjson-pydantic>=0.7",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "EM",  # flake8-errmsg (assign message to a var before raising)
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "RUF", # ruff-specific
]
# Python attributes are snake_case; msgspec `rename="camel"` maps them to the
# CoverageJSON lowerCamelCase wire names, so N815 is unnecessary.

[tool.ruff.lint.flake8-tidy-imports]
# Use absolute imports throughout: explicit, grep-able, and they stay flat as
# subpackages (e.g. the optional bridges) are added.
ban-relative-imports = "all"

[tool.mypy]
files = ["src", "tests"]
python_version = "3.11"
strict = true
warn_unreachable = true
enable_error_code = ["redundant-expr", "truthy-bool", "ignore-without-code"]

[[tool.mypy.overrides]]
# cftime ships no type stubs or py.typed marker; the xarray bridge uses it only
# for the non-standard-calendar time path.
module = ["cftime"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# pandas ships no py.typed marker (its types live in the separate pandas-stubs
# package); the pandas bridge treats it as untyped.
module = ["pandas"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# geopandas and shapely type coverage is partial; the geo bridge treats them as
# untyped (it lazy-imports them only inside its functions).
module = ["geopandas", "shapely"]
ignore_missing_imports = true

[tool.basedpyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
pythonVersion = "3.11"

[tool.pytest.ini_options]
# Run doctests in the package modules alongside the test suite. `importlib`
# import mode avoids src-layout duplicate-module issues with --doctest-modules.
testpaths = ["src", "tests"]
addopts = "-ra --doctest-modules --import-mode=importlib"
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]

[tool.coverage.run]
source = ["covjson_msgspec"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
