[project]
name = "covjson-msgspec"
version = "0.1.0"
description = "Fast, fully-typed CoverageJSON models built on msgspec"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = [ "LICENSE" ]
authors = [ { name = "Chuck Daniels", email = "cjdaniels4@gmail.com" } ]
keywords = [ "coveragejson", "covjson", "msgspec", "geospatial", "ogc" ]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: GIS",
  "Typing :: Typed",
]
dependencies = [
  # 0.18 is a deliberate recent baseline for this fast-moving, pre-1.0 core
  # dependency: the APIs we use (json.format, schema_components(ref_template=),
  # structs.replace) exist since 0.16, but we don't claim support below 0.18.
  # See ADR-0010 for the floor policy.
  "msgspec>=0.18",
  # BCP 47 language-tag validation for i18n keys (validation.py). Pure
  # Python, zero runtime deps in its base install (the `[data]` extra pulls
  # in language_data, which we don't use). See ADR-0005.
  "langcodes>=3.5",
]

[project.urls]
Homepage   = "https://github.com/chuckwondo/covjson-msgspec"
Repository = "https://github.com/chuckwondo/covjson-msgspec"
Issues     = "https://github.com/chuckwondo/covjson-msgspec/issues"

# Optional bridges: the "thin core + opt-in bridges" architecture. The core
# depends only on msgspec and langcodes (both pure Python, no heavy/native
# transitive deps; see ADR-0005); each bridge below lazy-imports its own
# (typically numeric or geospatial) dependency and raises an install hint if
# missing.
#
# Floor policy (ADR-0010): each lower bound is the lowest version that provides
# the APIs the bridge uses AND ships a cp311 wheel (our Python floor, so a 3.11
# user never has to build from source). Verified by the lowest-direct CI lane;
# raised only by deliberate decision, never auto-bumped by Dependabot (#65).
[project.optional-dependencies]
# numpy 1.24 has cp311 wheels; the all-extras resolution pins it here via xarray.
numpy = [ "numpy>=1.24" ]
# xarray>=2025.01.2 is the first release to PRESERVE a non-nanosecond datetime64
# instead of coercing it to ns; the temporal bridge needs it so a standard-calendar
# date outside numpy's ns window (~1677-2262) stays faithful rather than int64-
# wrapping (numpy#9956; #109). It also ships xarray.DataTree (the earlier 2024.10
# floor reason), which it subsumes. cftime 1.6.2 is the first release with a cp311
# wheel (1.6.0/1.6.1 have none).
xarray = [ "xarray>=2025.01.2", "numpy>=1.24", "cftime>=1.6.2" ]
# pandas 2.0 is the modern floor (1.x is EOL); the all-extras resolution pulls
# 2.1 via xarray, so 2.0 is a true lower bound rather than the tested version.
pandas = [ "pandas>=2.0", "numpy>=1.24" ]
# geopandas guarantees pandas + numpy transitively, but the geo bridge imports
# both directly (it reuses the pandas bridge and builds geometry with numpy), so
# list them explicitly rather than relying on a transitive dependency. geopandas
# is pure Python (wheel installs on any 3.11+); shapely 2.0 is the vectorized API.
geo = [ "geopandas>=0.14", "shapely>=2.0", "pandas>=2.0", "numpy>=1.24" ]
# FastAPI response adapter (CovJSONResponse). The framework-agnostic core stays
# in media_type.py; fastapi is imported only behind this extra. Deliberately kept
# out of `all` below, which aggregates the data bridges, not a web framework.
# 0.110 matches titiler's floor (the titiler-covjson coupling), not an API need.
fastapi = [ "fastapi>=0.110" ]
# The litestar response-helper bridge is planned but not yet shipped, so it
# carries no extra until there is code behind it (an extra that installs a
# framework but adds nothing would mislead).
all = [ "covjson-msgspec[numpy,xarray,pandas,geo]" ]

# PEP 735 dependency groups (uv-native).
[dependency-groups]
# Default local dev set: pure-Python tooling + every bridge, so `uv sync` works
# on any platform without a build toolchain. (mypy ships wheels; the Node-based
# checker lives in `typecheck` below.)
dev = [
  "covjson-msgspec[all]",
  "covjson-msgspec[fastapi]",
  "ruff>=0.15",
  "mypy>=1.13",
  # Type stubs so mypy checks the bridges against the real APIs (these libraries
  # ship no py.typed marker). cftime has no stub package, so it stays untyped.
  "pandas-stubs",
  "types-geopandas",
  "types-shapely",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "coverage>=7.14.3",
  # httpx2 backs Starlette's TestClient (tests/test_fastapi.py). Pydantic took
  # over httpx as httpx2; Starlette's TestClient prefers it and deprecates plain
  # httpx.
  "httpx2>=2.0",
  "prek>=0.0.1",
]
# Strict source-gate checker for CI. basedpyright bundles a Node runtime
# (nodejs-wheel-binaries), so it is opt-in to keep the default sync lightweight.
# pyrefly + ty (pre-1.0) run via `uvx` in CI and are deliberately kept out of
# the lock.
typecheck = [ "basedpyright>=1.21" ]
bench = [
  "covjson-msgspec[all]",
  "covjson-pydantic>=0.7",
]
# Documentation site (see ADR-0014). ProperDocs is a maintained fork of MkDocs
# 1.x (the upstream is diverging toward a plugin-less, incompatible 2.0); the
# Material theme skins it; mkdocstrings extracts the API reference statically
# from source via griffe. Static extraction is the load-bearing reason for this
# stack: it renders our `from __future__ import annotations`, TYPE_CHECKING-only
# bridge signatures (e.g. `to_xarray(coverage: Coverage) -> xr.Dataset`)
# faithfully without importing numpy/xarray/pandas at build time. This group is
# dev-only tooling, not a runtime dependency of the published package, so
# ADR-0010's wheel-floor policy does not apply; the floors are simply the
# versions the toolchain was validated against. Signature formatting reuses the
# `ruff` from the `dev` group.
docs = [
  "properdocs>=1.6.7",
  "mkdocs-material>=9.7",
  "mkdocstrings[python]>=1.0",
]

[build-system]
requires      = [ "uv_build>=0.11.23,<0.12.0" ]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
src         = [ "src", "tests", "benchmarks" ]

[tool.ruff.lint]
# PLC2701 bans importing another package's `_private` names (third-party or
# stdlib); it does not police intra-package private imports (that convention is
# enforced by review, see CLAUDE.md). Still a preview rule, so `preview` must be
# on; `explicit-preview-rules` then enables preview rules only when named by
# their exact code, keeping every other preview rule off.
preview = true
explicit-preview-rules = true
select = [
  "E",       # pycodestyle errors
  "W",       # pycodestyle warnings
  "F",       # pyflakes
  "I",       # isort
  "N",       # pep8-naming
  "UP",      # pyupgrade
  "B",       # flake8-bugbear
  "C4",      # flake8-comprehensions
  "EM",      # flake8-errmsg (assign message to a var before raising)
  "SIM",     # flake8-simplify
  "TID",     # flake8-tidy-imports
  "RUF",     # ruff-specific
  "PLC2701", # import-private-name: don't import another package's `_private`
]

[tool.ruff.lint.flake8-tidy-imports]
# Use absolute imports throughout: explicit, grep-able, and they stay flat as
# subpackages (e.g. the optional bridges) are added.
ban-relative-imports = "all"

[tool.mypy]
files             = [ "src", "tests", "benchmarks" ]
strict            = true
warn_unreachable  = true
enable_error_code = [ "redundant-expr", "truthy-bool", "ignore-without-code" ]

[[tool.mypy.overrides]]
# cftime ships no py.typed marker and has no stub package (no types-cftime on
# PyPI), so it stays untyped; the xarray bridge uses it only for the
# non-standard-calendar time path. pandas / geopandas / shapely are now typed via
# the pandas-stubs / types-geopandas / types-shapely packages in the dev group.
module                 = [ "cftime" ]
ignore_missing_imports = true

[tool.basedpyright]
include          = [ "src", "tests", "benchmarks" ]
typeCheckingMode = "strict"

# Check src + tests (mirroring mypy's `files` and basedpyright's `include`) so a
# bare `uvx ty check` covers the same set as the blocking checkers.
[tool.ty.src]
include = [ "src", "tests", "benchmarks" ]

# ty is an informational (non-blocking) checker. Two negative tests deliberately
# pass a wrong-typed argument to a public function, guarded by mypy's precise
# `# type: ignore[arg-type]` (whose warn_unused_ignores still trips if the public
# signature ever weakens). ty does not honor mypy's error code, and a second
# inline `# ty: ignore[...]` would overflow the 88-char limit, so relax just that
# one rule for just those two files. mypy + basedpyright stay fully strict here,
# so this cannot mask a real public-API type weakness. (The numpy bridge test
# uses inline `# ty: ignore[...]` where it fits.)
[[tool.ty.overrides]]
include = [ "tests/test_geo.py", "tests/test_xarray.py" ]
rules   = { invalid-argument-type = "ignore" }

# pyrefly is an informational (non-blocking) checker. Configured here (rather than
# via the implicit import from `[tool.mypy]`) so `tests/` is on the search path:
# the suite imports shared helpers by top-level name (e.g. `import fetchers`) via
# pytest's `pythonpath`, which the default `src`-only import root cannot resolve.
# `preset = "strict"` sharpens the informational signal past what the blocking
# mypy / basedpyright pair flag (see #71).
[tool.pyrefly]
preset           = "strict"
project_includes = [ "src", "tests", "benchmarks" ]
search_path      = [ "src", "tests", "benchmarks" ]

[tool.pyrefly.errors]
# strict's `missing-override-decorator` wants `@override` on ~32 overriding
# methods. On the 3.11 floor (ADR-0001) `typing.override` does not exist, so that
# means `typing_extensions`: a new core runtime dependency (neither msgspec nor
# langcodes pulls it) added only to satisfy an informational-only checker the
# blocking mypy / basedpyright pair do not gate on. Not worth the dependency;
# revisit at the 3.12 floor, where `typing.override` is free. See #71.
missing-override-decorator = false

[tool.pytest.ini_options]
# Run doctests in the package modules alongside the test suite. `importlib`
# import mode avoids src-layout duplicate-module issues with --doctest-modules.
testpaths           = [ "src", "tests" ]
addopts             = "-ra --doctest-modules --import-mode=importlib"
pythonpath          = [ "tests" ]
doctest_optionflags = [ "NORMALIZE_WHITESPACE", "ELLIPSIS" ]

[tool.coverage.run]
source = [ "covjson_msgspec" ]
branch = true

[tool.coverage.report]
show_missing = true
exclude_also = [
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "@(abc\\.)?abstractmethod",
]
